...
                  return PosterList<Tv>(data.popularTv);
                } else {
                  return Text('Failed');
                }
              }),
              BuildSubHeading(
                title: 'Now Playing',
                onTap: () =>
                    Navigator.pushNamed(context, NowPlayingTvPage.ROUTE_NAME),
              ),
              BlocBuilder<TvListCubit, TvListState>(builder: (context, data) {
                final state = data.nowPlayingState;
                if (state == RequestState.Loading) {
...
